# cdk-poetry

./: .gitignore  README.md  app.py  pyproject.toml
cdk_poetry/: cdk_poetry_stack.py
cdk_poetry/lambdas/common/: pyproject.toml
cdk_poetry/lambdas/common/common/: helper.py
cdk_poetry/lambdas/hello_world/: Dockerfile  index.py  pyproject.toml
cdk_poetry/lambdas/hello_world/another_lambda/: index.py
cdk_poetry/lambdas/hello_world/hello_world/: index.py
tests/: pyproject.toml
tests/unit/: test_cdk_poetry_stack.py  test_hello_world_lambda.py
