[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Serhii Kalinets <kalinets@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hello-world = {path = "../cdk_poetry/lambdas/hello_world", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
