[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Serhii Kalinets <kalinets@gmail.com>"]
packages = [{include = "common"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
