[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Serhii Kalinets <kalinets@gmail.com>"]
readme = "README.md"
packages = [{include = "hello_world"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
