[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["Serhii Kalinets <kalinets@gmail.com>"]
packages = [{include = "hello_world"}]

[tool.poetry.dependencies]
python = "^3.11"
common = {path = "../common", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
